# Star-Finder-Telescope

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  build.sh  compile.sh  configure.sh  display.sh  properties.toml  rpi-toolchain.cmake  run.sh  run_tests.sh
.github/workflows/: build_test.yml
arduino/main/: main.ino
database/: celestial_body_tables.sql  database_generator.py
include/: CommandList.hpp  CommandTerminal.hpp  CommandTypes.hpp  Common.hpp  DatabaseSchema.hpp  InformationDisplay.hpp  Logger.hpp  MotionController.hpp  OpticsManager.hpp  PositionManager.hpp  PropertyManager.hpp  RPi3MotionController.hpp  StarApi.hpp  StarDatabase.hpp  StarDatabaseAdapter.hpp  StarTracker.hpp  Subsystem.hpp
include/interfaces/: ICommandTerminal.hpp  IGpsModule.hpp  IInformationDisplay.hpp  IMotionController.hpp  IOpticsManager.hpp  IPositionManager.hpp  IStarDatabase.hpp  IStarTracker.hpp  ISubsystem.hpp  RPi3MotionController.hpp
include/interfaces/GpsModule/: IGpsModule.hpp  SimGpsModule.hpp
include/interfaces/GpsModule/Bn180Gps/: Bn180GpsModule.hpp
include/interfaces/MotionController/: AVRMotionController.hpp  IMotionController.hpp  RPi3MotionController.hpp  SimMotionController.hpp
include/interfaces/StarDatabase/: DatabaseSchema.hpp  IStarDatabase.hpp  SimStarDatabase.hpp  StarApi.hpp  StarDatabaseAdapter.hpp
include/interfaces/sim/: SimMotionController.hpp
lib/WiringPi/: libwiringPiDev.so.2.70
src/: CMakeLists.txt  CommandTerminal.cpp  InformationDisplay.cpp  Logger.cpp  MotionController.cpp  OpticsManager.cpp  PositionManager.cpp  PropertyManager.cpp  RPi3MotionController.cpp  StarApi.cpp  StarDatabase.cpp  StarDatabaseAdapter.cpp  StarTracker.cpp  main.cpp
src/interfaces/: RPi3MotionController.cpp  StarDatabaseAdapter.cpp
src/interfaces/GpsModule/: SimGpsModule.cpp
src/interfaces/GpsModule/Bn180Gps/: Bn180GpsModule.cpp
src/interfaces/MotionController/: AVRMotionController.cpp  RPi3MotionController.cpp  SimMotionController.cpp
src/interfaces/StarDatabase/: SimStarDatabase.cpp  StarApi.cpp  StarDatabaseAdapter.cpp
src/interfaces/sim/: SimMotionController.cpp
src/sim/: SimMotionController.cpp
test/: CMakeLists.txt  MinCommandTerminal.hpp  MinInformationDisplay.hpp  MinMotionController.hpp  MinOpticsManager.hpp  MinPositionManager.hpp  MinStarTracker.hpp  TestCommandTerminal.cpp
test/command_terminal/: CT_OpticsManager.hpp  CT_PositionManager.hpp  CT_StarTracker.hpp  TestCommandTerminal.cpp
test/information_display/: TestInformationDisplay.cpp
test/logger/: TestLogger.cpp
test/motion_controller/: TestMotionController.cpp
test/optics_manager/: TestOpticsManager.cpp
test/position_manager/: TestPositionManager.cpp
test/star_database/: TestStarDatabase.cpp
test/star_tracker/: TestStarTracker.cpp
util/serial/: Serial.cpp  Serial.hpp
